tests/snapshots/s9_tags_view__view_empty_snapshot.snap
---
source: tests/s9_tags_view.rs
assertion_line: 51
expression: view
---
TagsView {
    rows: [],
    totals: TagsTotals {
        tags: 0,
        split: 0,
        sent: 0,
        synced: 0,
        active: 0,
    },
}
