tests/snapshots/s9_tags_view__view_pushing_tag.snap
---
source: tests/s9_tags_view.rs
assertion_line: 96
expression: view
---
TagsView {
    rows: [
        TagRow {
            uid: 3,
            name: "archive.tar",
            total: 500,
            split: 500,
            seen: 500,
            stored: 500,
            sent: 250,
            synced: 0,
            address_short: "cccccc…cccc",
            status: Pushing,
            completion_pct: 0,
            started_at: "2024-05-07T12:00:00Z",
        },
    ],
    totals: TagsTotals {
        tags: 1,
        split: 500,
        sent: 250,
        synced: 0,
        active: 1,
    },
}
