tests/snapshots/s9_tags_view__view_splitting_tag.snap
---
source: tests/s9_tags_view.rs
assertion_line: 81
expression: view
---
TagsView {
    rows: [
        TagRow {
            uid: 2,
            name: "movie.mp4",
            total: 200,
            split: 80,
            seen: 80,
            stored: 80,
            sent: 0,
            synced: 0,
            address_short: "bbbbbb…bbbb",
            status: Splitting,
            completion_pct: 0,
            started_at: "2024-05-07T12:00:00Z",
        },
    ],
    totals: TagsTotals {
        tags: 1,
        split: 80,
        sent: 0,
        synced: 0,
        active: 1,
    },
}
