tests/snapshots/s9_tags_view__view_syncing_tag.snap
---
source: tests/s9_tags_view.rs
assertion_line: 111
expression: view
---
TagsView {
    rows: [
        TagRow {
            uid: 4,
            name: "doc.pdf",
            total: 100,
            split: 100,
            seen: 100,
            stored: 100,
            sent: 100,
            synced: 70,
            address_short: "dddddd…dddd",
            status: Syncing,
            completion_pct: 70,
            started_at: "2024-05-07T12:00:00Z",
        },
    ],
    totals: TagsTotals {
        tags: 1,
        split: 100,
        sent: 100,
        synced: 70,
        active: 1,
    },
}
