tests/snapshots/s9_tags_view__view_totals_aggregate_across_tags.snap
---
source: tests/s9_tags_view.rs
assertion_line: 161
expression: view
---
TagsView {
    rows: [
        TagRow {
            uid: 4,
            name: "d",
            total: 0,
            split: 0,
            seen: 0,
            stored: 0,
            sent: 0,
            synced: 0,
            address_short: "040404…0404",
            status: Pending,
            completion_pct: 0,
            started_at: "2024-05-07T12:00:00Z",
        },
        TagRow {
            uid: 3,
            name: "c",
            total: 100,
            split: 100,
            seen: 100,
            stored: 100,
            sent: 100,
            synced: 50,
            address_short: "030303…0303",
            status: Syncing,
            completion_pct: 50,
            started_at: "2024-05-07T12:00:00Z",
        },
        TagRow {
            uid: 2,
            name: "b",
            total: 100,
            split: 50,
            seen: 50,
            stored: 50,
            sent: 0,
            synced: 0,
            address_short: "020202…0202",
            status: Splitting,
            completion_pct: 0,
            started_at: "2024-05-07T12:00:00Z",
        },
        TagRow {
            uid: 1,
            name: "a",
            total: 100,
            split: 100,
            seen: 100,
            stored: 100,
            sent: 100,
            synced: 100,
            address_short: "010101…0101",
            status: Synced,
            completion_pct: 100,
            started_at: "2024-05-07T12:00:00Z",
        },
    ],
    totals: TagsTotals {
        tags: 4,
        split: 250,
        sent: 200,
        synced: 150,
        active: 2,
    },
}
