tests/snapshots/s9_tags_view__view_unnamed_tag_falls_back_to_uid.snap
---
source: tests/s9_tags_view.rs
expression: view
---
TagsView {
    rows: [
        TagRow {
            uid: 99,
            name: "tag-99",
            total: 100,
            split: 100,
            seen: 100,
            stored: 100,
            sent: 100,
            synced: 100,
            address_short: "ffffff…ffff",
            address_full: "ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
            status: Synced,
            completion_pct: 100,
            started_at: "2024-05-07T12:00:00Z",
        },
    ],
    totals: TagsTotals {
        tags: 1,
        split: 100,
        sent: 100,
        synced: 100,
        active: 0,
    },
}
